--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #4169AA;
+  background: #042029;
   font-family: "proxima-nova", "Source Sans Pro", sans-serif;
   font-size: 1em;
   letter-spacing: 0.1px;
