--- a/services/client/public/style.css
+++ b/services/client/public/style.css
@@ -41,6 +41,7 @@ a:hover {
   min-height: 300px;
   background: #E6EAEA;
 }
+
 @media screen and (max-width: 360px) {
   #frame {
     width: 100%;
@@ -59,6 +60,7 @@ a:hover {
   overflow: hidden;
   position: relative;
 }
+
 @media screen and (max-width: 735px) {
   #frame #sidepanel {
     width: 58px;
@@ -70,55 +72,67 @@ a:hover {
   height: calc(100% - 177px);
   overflow: hidden;
 }
+
 @media screen and (max-width: 735px) {
   #frame #sidepanel .rooms {
     height: calc(100% - 149px);
     overflow-y: scroll;
     overflow-x: hidden;
   }
+
   #frame #sidepanel .rooms::-webkit-scrollbar {
     display: none;
   }
 }
+
 #frame #sidepanel .rooms.expanded {
   height: calc(100% - 334px);
 }
+
 #frame #sidepanel .rooms ul {
   margin: 0px;
   padding: 0px;
   width: 100%;
 }
+
 #frame #sidepanel .rooms ul li.room {
   position: relative;
   padding: 10px 0 15px 0;
   font-size: 0.9em;
   cursor: pointer;
 }
+
 @media screen and (max-width: 735px) {
   #frame #sidepanel .rooms ul li.room {
     padding: 6px 0 46px 8px;
   }
 }
+
 #frame #sidepanel .rooms ul li.room:hover {
   background: #32465a;
 }
+
 #frame #sidepanel .rooms ul li.room.active {
   background: #32465a;
   border-right: 5px solid #FF9900;
 }
+
 #frame #sidepanel .rooms ul li.room.active span.room-status {
   border: 2px solid #32465a !important;
 }
+
 #frame #sidepanel .rooms ul li.room .wrap {
   width: 88%;
   margin: 0 auto;
   position: relative;
 }
+
 @media screen and (max-width: 735px) {
   #frame #sidepanel .rooms ul li.room .wrap {
     width: 100%;
   }
 }
+
 #frame #sidepanel .rooms ul li.room .wrap span {
   position: absolute;
   left: 0;
@@ -129,15 +143,19 @@ a:hover {
   border: 2px solid #2c3e50;
   background: #95a5a6;
 }
+
 #frame #sidepanel .rooms ul li.room .wrap span.online {
   background: #2ecc71;
 }
+
 #frame #sidepanel .rooms ul li.room .wrap span.away {
   background: #f1c40f;
 }
+
 #frame #sidepanel .rooms ul li.room .wrap span.unread {
   background: #FF9900;
 }
+
 #frame #sidepanel .rooms ul li.room .wrap span.none {
   background: transparent;
   border: 0px transparent;
@@ -145,26 +163,31 @@ a:hover {
 
 #frame #sidepanel .rooms ul li.room .wrap img {
   width: 40px;
-  border-radius: 50%;
+  border-radius: 10%;
   float: left;
   margin-right: 10px;
 }
+
 @media screen and (max-width: 735px) {
   #frame #sidepanel .rooms ul li.room .wrap img {
     margin-right: 0px;
   }
 }
+
 #frame #sidepanel .rooms ul li.room .wrap .meta {
   padding: 5px 0 0 0;
 }
+
 @media screen and (max-width: 735px) {
   #frame #sidepanel .rooms ul li.room .wrap .meta {
     display: none;
   }
 }
+
 #frame #sidepanel .rooms ul li.room .wrap .meta .name {
   font-weight: 600;
 }
+
 #frame #sidepanel .rooms ul li.room .wrap .meta .preview {
   margin: 5px 0 0 0;
   padding: 0 0 1px;
@@ -177,6 +200,7 @@ a:hover {
   -webkit-transition: 1s all ease;
   transition: 1s all ease;
 }
+
 #frame #sidepanel .rooms ul li.room .wrap .meta .preview span {
   position: initial;
   border-radius: initial;
@@ -195,32 +219,38 @@ a:hover {
   overflow: hidden;
   position: relative;
 }
+
 @media screen and (max-width: 735px) {
   #frame .content {
     width: calc(100% - 58px);
     min-width: 300px !important;
   }
 }
+
 @media screen and (min-width: 900px) {
   #frame .content {
     width: calc(100% - 340px);
   }
 }
+
 #frame .content .room-details {
   width: 100%;
   height: 60px;
   line-height: 60px;
   background: #f5f5f5;
 }
+
 #frame .content .room-details img.description {
   width: 40px;
-  border-radius: 50%;
+  border-radius: 10%;
   float: left;
   margin: 9px 12px 0 9px;
 }
+
 #frame .content .room-details p {
   float: left;
 }
+
 #frame .content .room-details .online-count {
   float: right;
   margin-left: 14px;
@@ -235,6 +265,7 @@ a:hover {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
 @media screen and (max-width: 735px) {
   #frame .content .messages-wrapper .list {
     max-height: calc(100% - 105px);
@@ -245,6 +276,7 @@ a:hover {
   width: 8px;
   background: transparent;
 }
+
 #frame .content .messages-wrapper .list::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -274,7 +306,7 @@ a:hover {
   border-radius: 20px;
   max-width: calc(100% - 45px);
   line-height: 130%;
-  word-wrap:break-word;
+  word-wrap: break-word;
 }
 
 #frame .content .messages-wrapper .list .message .sender {
@@ -289,6 +321,7 @@ a:hover {
   background: #FF8800;
   color: #f5f5f5;
 }
+
 #frame .content .messages-wrapper .list .message.replies p {
   background: #f5f5f5;
 }
@@ -300,11 +333,13 @@ a:hover {
   width: 100%;
   z-index: 99;
 }
+
 #frame .content .message-input .wrap {
   position: relative;
 }
+
 #frame .content .message-input .wrap input {
-  font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
+  font-family: "proxima-nova", "Source Sans Pro", sans-serif;
   float: left;
   border: none;
   width: calc(100% - 50px);
@@ -312,31 +347,37 @@ a:hover {
   font-size: 0.8em;
   color: #32465a;
 }
+
 @media screen and (max-width: 735px) {
   #frame .content .message-input .wrap input {
     padding: 15px 32px 16px 8px;
   }
 }
+
 #frame .content .message-input .wrap input:focus {
   outline: none;
 }
+
 #frame .content .message-input .wrap button {
   float: right;
   border: none;
   width: 50px;
   padding: 12px 0;
   cursor: pointer;
-  background: #FF9900;
+  background: linear-gradient(228deg, rgb(255 138 35), rgb(217, 96, 15), rgb(186, 61, 21));
   color: #f5f5f5;
 }
+
 @media screen and (max-width: 735px) {
   #frame .content .message-input .wrap button {
     padding: 16px 0;
   }
 }
+
 #frame .content .message-input .wrap button:hover {
   background: #FF8800;
 }
+
 #frame .content .message-input .wrap button:focus {
   outline: none;
 }
@@ -375,7 +416,7 @@ a:hover {
   margin: 0 auto;
   position: relative;
   -webkit-animation: 2s bulge infinite ease-out;
-          animation: 2s bulge infinite ease-out;
+  animation: 2s bulge infinite ease-out;
 }
 
 .typing-indicator span {
@@ -388,17 +429,20 @@ a:hover {
   border-radius: 50%;
   opacity: 0.4;
 }
+
 .typing-indicator span:nth-of-type(1) {
   -webkit-animation: 1s blink infinite 0.3333s;
-          animation: 1s blink infinite 0.3333s;
+  animation: 1s blink infinite 0.3333s;
 }
+
 .typing-indicator span:nth-of-type(2) {
   -webkit-animation: 1s blink infinite 0.6666s;
-          animation: 1s blink infinite 0.6666s;
+  animation: 1s blink infinite 0.6666s;
 }
+
 .typing-indicator span:nth-of-type(3) {
   -webkit-animation: 1s blink infinite 0.9999s;
-          animation: 1s blink infinite 0.9999s;
+  animation: 1s blink infinite 0.9999s;
 }
 
 @-webkit-keyframes blink {
@@ -412,22 +456,24 @@ a:hover {
     opacity: 1;
   }
 }
+
 @-webkit-keyframes bulge {
   50% {
     -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    transform: scale(1.05);
   }
 }
+
 @keyframes bulge {
   50% {
     -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    transform: scale(1.05);
   }
 }
 
 /* Dropdown with arrow adapted from https://bootsnipp.com/snippets/featured/dropdown-menu-ui */
-.dropdown {
-}
+.dropdown {}
+
 .dropdown-menu>li.item {
   line-height: 22px;
   margin-left: 1em;
@@ -453,10 +499,11 @@ a:hover {
   top: calc(100% - 15px);
   left: unset;
   right: 0px;
-  border-radius:4px;
-  box-shadow:none;
-  margin-top:20px;
+  border-radius: 4px;
+  box-shadow: none;
+  margin-top: 20px;
 }
+
 .dropdown ul.dropdown-menu:before {
   content: "";
   border-bottom: 10px solid #fff;
@@ -467,6 +514,7 @@ a:hover {
   right: 16px;
   z-index: 10;
 }
+
 .dropdown ul.dropdown-menu:after {
   content: "";
   border-bottom: 12px solid #ccc;
@@ -478,9 +526,15 @@ a:hover {
   z-index: 9;
 }
 
-.fade-enter-active, .fade-leave-active {
+.fade-enter-active,
+.fade-leave-active {
   transition: opacity .5s;
 }
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+
+.fade-enter,
+.fade-leave-to
+
+/* .fade-leave-active below version 2.1.8 */
+  {
   opacity: 0;
 }
