--- a/services/client/public/style.css
+++ b/services/client/public/style.css
@@ -233,6 +233,40 @@ a:hover {
   }
 }
 
+#frame .search {
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background: #202d3a;
+}
+
+.searchTerm {
+  width: 80%;
+  border: 3px solid #00B4CC;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus {
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
 #frame .content .room-details {
   width: 100%;
   height: 60px;
