--- a/services/client/public/style.css
+++ b/services/client/public/style.css
@@ -36,7 +36,7 @@ a:hover {
 #frame {
   width: 95%;
   min-width: 360px;
-  max-width: 1000px;
+  /*max-width: 1000px;*/
   height: 100vh;
   min-height: 300px;
   background: #E6EAEA;
@@ -55,8 +55,8 @@ a:hover {
   max-width: 340px;
   width: 40%;
   height: 100%;
-  background: #2c3e50;
-  color: #f5f5f5;
+  background: #dadfdf;
+  color: #32465a;
   overflow: hidden;
   position: relative;
 }
@@ -100,6 +100,7 @@ a:hover {
   padding: 10px 0 15px 0;
   font-size: 0.9em;
   cursor: pointer;
+  border-right: 5px solid #d6dada;
 }
 
 @media screen and (max-width: 735px) {
@@ -109,16 +110,16 @@ a:hover {
 }
 
 #frame #sidepanel .rooms ul li.room:hover {
-  background: #32465a;
+  background: #E6EAEA;
 }
 
 #frame #sidepanel .rooms ul li.room.active {
-  background: #32465a;
+  background: #E6EAEA;
   border-right: 5px solid #FF9900;
 }
 
 #frame #sidepanel .rooms ul li.room.active span.room-status {
-  border: 2px solid #32465a !important;
+  border: 2px solid #E6EAEA !important;
 }
 
 #frame #sidepanel .rooms ul li.room .wrap {
@@ -233,38 +234,28 @@ a:hover {
   }
 }
 
-#frame .search {
+#frame div.search {
   width: 100%;
   height: 60px;
   line-height: 60px;
-  background: #202d3a;
-}
-
-.searchTerm {
-  width: 80%;
-  border: 3px solid #00B4CC;
-  border-right: none;
-  padding: 5px;
-  height: 20px;
-  border-radius: 5px 0 0 5px;
-  outline: none;
-  color: #9DBFAF;
-}
-
-.searchTerm:focus {
-  color: #00B4CC;
-}
-
-.searchButton {
-  width: 40px;
-  height: 36px;
-  border: 1px solid #00B4CC;
-  background: #00B4CC;
-  text-align: center;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
+  background: #eaeaea;
   cursor: pointer;
-  font-size: 20px;
+  border-bottom: 3px solid #656565
+}
+
+#frame div.search:hover {
+  background: #f0f0f0;
+}
+
+#frame .search img {
+  width: 30px;
+  border-radius: 10%;
+  float: left;
+  margin: 15px 15px 0px 24px
+}
+
+#frame .search p {
+  float: left;
 }
 
 #frame .content .room-details {
@@ -272,6 +263,7 @@ a:hover {
   height: 60px;
   line-height: 60px;
   background: #f5f5f5;
+  border-bottom: 3px solid #656565
 }
 
 #frame .content .room-details img.description {
