--- a/services/client/public/style.css
+++ b/services/client/public/style.css
@@ -34,7 +34,7 @@ a:hover {
 }
 
 #frame {
-  width: 95%;
+  width: 100%;
   min-width: 360px;
   /*max-width: 1000px;*/
   height: 100vh;
@@ -71,6 +71,7 @@ a:hover {
 #frame #sidepanel .rooms {
   height: calc(100% - 177px);
   overflow: hidden;
+  border-top: 3px solid #a8a8a8;
 }
 
 @media screen and (max-width: 735px) {
@@ -187,6 +188,9 @@ a:hover {
 
 #frame #sidepanel .rooms ul li.room .wrap .meta .name {
   font-weight: 600;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #frame #sidepanel .rooms ul li.room .wrap .meta .preview {
@@ -228,7 +232,7 @@ a:hover {
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 850px) {
   #frame .content {
     width: calc(100% - 340px);
   }
@@ -240,7 +244,7 @@ a:hover {
   line-height: 60px;
   background: #eaeaea;
   cursor: pointer;
-  border-bottom: 3px solid #656565
+  border-right: 3px solid #e3e2e2;
 }
 
 #frame div.search:hover {
@@ -254,8 +258,14 @@ a:hover {
   margin: 15px 15px 0px 24px
 }
 
-#frame .search p {
-  float: left;
+@media screen and (max-width: 735px) {
+  #frame .search p {
+    display: none;
+  }
+
+  #frame .search img {
+    margin: 15px 15px 0px 14px
+  }
 }
 
 #frame .content .room-details {
@@ -263,7 +273,6 @@ a:hover {
   height: 60px;
   line-height: 60px;
   background: #f5f5f5;
-  border-bottom: 3px solid #656565
 }
 
 #frame .content .room-details img.description {
@@ -284,6 +293,10 @@ a:hover {
 }
 
 /* NEW STYES */
+#frame .content .messages-wrapper {
+  border-top: 3px solid #a8a8a8;
+}
+
 #frame .content .messages-wrapper .list {
   height: auto;
   min-height: calc(100% - 93px);
@@ -357,7 +370,7 @@ a:hover {
   position: absolute;
   bottom: 0;
   width: 100%;
-  z-index: 99;
+  z-index: 50;
 }
 
 #frame .content .message-input .wrap {
@@ -413,7 +426,7 @@ a:hover {
   position: absolute;
   bottom: 0;
   width: 100%;
-  z-index: 99;
+  z-index: 50;
   padding-bottom: 15px;
 }
 
@@ -498,7 +511,9 @@ a:hover {
 }
 
 /* Dropdown with arrow adapted from https://bootsnipp.com/snippets/featured/dropdown-menu-ui */
-.dropdown {}
+.dropdown {
+  z-index: 11
+}
 
 .dropdown-menu>li.item {
   line-height: 22px;
@@ -563,4 +578,106 @@ a:hover {
 /* .fade-leave-active below version 2.1.8 */
   {
   opacity: 0;
+}
+
+/* Search overlay */
+
+/* DIV-element with black background and 50% opacity set */
+div.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgb(212, 208, 208);
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  z-index: 80;
+  /* required for opacity to work in IE */
+}
+
+
+.searcher {
+  position: relative;
+  max-width: 600px;
+  margin: 150px auto;
+  z-index: 99;
+}
+
+.searcher .searchInput {
+  background: #fff;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  position: absolute;
+  box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
+}
+
+.searchInput input {
+  height: 55px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 0 60px 0 20px;
+  font-size: 18px;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+}
+
+.searchInput.active input {
+  border-radius: 5px 5px 0 0;
+}
+
+.searchInput .resultBox {
+  padding: 0;
+  opacity: 1;
+  pointer-events: none;
+  max-height: 280px;
+  overflow-y: auto;
+}
+
+.searchInput.active .resultBox {
+  padding: 10px 8px;
+  opacity: 1;
+  /*pointer-events: auto;*/
+}
+
+.resultBox li {
+  list-style: none;
+  padding: 8px 12px;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 3px;
+  color: #32465a;
+  pointer-events: auto;
+  display: block;
+}
+
+.searchInput.active .resultBox li {
+  display: block;
+}
+
+.resultBox li:hover {
+  background: #efefef;
+}
+
+.searchInput .icon {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  line-height: 55px;
+  font-size: 20px;
+  color: gray;
+  cursor: pointer;
+}
+
+.searchInput .icon i {
+  margin-top: 17px;
+}
+
+b {
+  font-weight: bold;
 }
